<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backbutton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/skip2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/skip2"
        app:srcCompat="@drawable/backarrow" />

    <TextView
        android:id="@+id/skip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="364dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="34dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/skip"
        android:textColor="@color/launchingBack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Next_button1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/onboardButton"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/Next_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip2"
        app:layout_constraintVertical_bias="0.062"
        app:srcCompat="@drawable/searchhouse" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/onboard2des"
        android:textAlignment="center"
        android:textColor="@color/launchingBack"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/Next_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/textView19"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/privacy"
        android:textAlignment="center"
        android:textColor="@color/launchingBack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Next_button1"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/addpostbutton1"
        android:layout_width="181dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toTopOf="@+id/Next_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/circle2" />

</androidx.constraintlayout.widget.ConstraintLayout>