<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Next_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/onboardButton"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/skip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="364dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="34dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/skip"
        android:textColor="@color/launchingBack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="140dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/onboard1des"
        android:textAlignment="center"
        android:textColor="@color/launchingBack"
        android:textSize="34sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="495dp"
        android:layout_height="600dp"
        android:layout_marginTop="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472"
        app:srcCompat="@drawable/onboard1" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="156dp"
        android:layout_height="22dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/Next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/circles" />

</androidx.constraintlayout.widget.ConstraintLayout>